development/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-app
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-container
      # Cambiar esta versión para probar rolling updates
        # nbrown/nginxhello:1.12.1
        # nbrown/nginxhello:1.13.5
        image: hashicorp/http-echo
        args:
        - "-text=Version 10"
