development/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-svc
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
      nodePort: 31771
